--- a/src/components/Observer.css
+++ b/src/components/Observer.css
@@ -1,4 +1,4 @@
 .active {
-  border-bottom: 4px solid var(--color-primary);
-  transition: all 0.2s ease-out;
+  border-bottom: 3px solid rgb(var(--color-main-300));
+  transition: all 0.5s ease-in-out;
 }
