adjusted contact form button to match download resume and added main color text to input fields

--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -66,8 +66,13 @@
 .theme-wrapper {
   display: flex;
   flex-direction: column;
-  justify-content: fit-content;
+  justify-content: center;
   align-items: center;
+
+}
+
+.theme-wrapper button {
+  transform: scale(0.7);
 }
 
 .theme-changer {
