--- a/src/components/ContactUs.css
+++ b/src/components/ContactUs.css
@@ -35,6 +35,7 @@
   background-color:  rgba(var(--color-background-second), 0.5);
   padding-left: 5px;
   border-radius: 3px;
+  color: rgba(var(--color-background-main-500)); ;
 }
 
 .contact-wrapper input::placeholder {
@@ -62,9 +63,7 @@
 }
 
 #submit-btn input {
-  background-color: rgb(var(--color-background-main));
-  text-shadow: 0.2px 0.2px rgb(var(--color-background-second));
-  border: 1px solid rgb(var(--color-main-700));
+
   margin-bottom: 2rem;
 }
 
@@ -76,12 +75,13 @@
   position: absolute;
   left: 80%;
   top: 25%;
-  color: rgb(var(--color-main-700));
+  color: rgb(var(--color-main-300));
+  z-index: 2;
 }
 
 #submit-btn input:hover,
 #submit-btn input:focus {
-  transition: 0.2s;
+  transition: all 0.3s ease-in-out;
   cursor: pointer;
   color: rgb(var(--color-main-700)) !important;
   text-shadow: none;
