--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -1,7 +1,7 @@
 
 .btn {
   width: fit-content;
-  height: 40px;
+  height: auto;
   color: rgb(var(--color-main-300));
   border-radius: 3px;
   padding: 10px 20px;
@@ -41,4 +41,8 @@
 }
 
 
-
+@media screen and (max-width: 568px) {
+  .btn {
+    padding: 10px 10px;
+  }
+}
