--- a/src/components/ContactUs.css
+++ b/src/components/ContactUs.css
@@ -9,6 +9,7 @@
   min-height: 365px;
   margin-top: 0;
   margin-bottom: 0;
+  padding-bottom: 1.5rem;
 }
 
 .contact-container h1 {
@@ -36,6 +37,8 @@
   padding-left: 5px;
   border-radius: 3px;
   color: rgba(var(--color-background-main-500)); ;
+  font-size: 1rem;
+  letter-spacing: 0.05rem;
 }
 
 .contact-wrapper input::placeholder {
@@ -62,11 +65,6 @@
   padding: 10px;
 }
 
-#submit-btn input {
-
-  margin-bottom: 2rem;
-}
-
 .submit-btn {
   position: relative;
 }
@@ -74,7 +72,7 @@
 .submit-btn i {
   position: absolute;
   left: 80%;
-  top: 25%;
+  top: 38%;
   color: rgb(var(--color-main-300));
   z-index: 2;
 }
