styled about me sction and refactored content

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -32,15 +32,13 @@
 
 .about-info h3 {
     border-bottom: 3px ridge rgb(var(--color-background-main));
-    line-height: 2rem;
-    margin-block-start: 0 !important;
+    line-height: 1.5rem;
+    max-width: 70vw;
+    margin-block-start:  !important;
     margin-block-end: 0 !important;
     margin-inline-start: 0px !important;
     margin-inline-end: 0px !important;
-}
-
-.about-info ul:last-child {
-    border-bottom: 2px ridge rgb(var(--color-background-main));
+    color: rgb(var(--color-main-500));
 }
 
 .about-info {
@@ -49,19 +47,18 @@
 
 .about-info p {
   margin-left: 20px;
+  max-width: 70vw;
+  color: rgb(var(--color-main-300));
+  line-height: 1.5rem;
 }
 
-.about-info li {
-  margin-left: 20px;
+.about-info:last-child {
+  border-bottom: 3px ridge rgb(var(--color-background-main));
 }
-
 .about-content p {
   font-weight: 400;
   margin-bottom: 0.8rem;
-}
-
-.about-info ul {
-  list-style: none;
+  max-width: 70vw;
 }
 
 .skills-icons {
