--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -10,7 +10,7 @@
   z-index: 999;
   word-spacing: 0.2rem;
   letter-spacing: 0.05rem;
-
+  transition: all 1s ease-in-out;
 }
 
 .navbar-container {
@@ -19,11 +19,13 @@
   align-items: center;
   height: 80px;
   max-width: 1500px;
+  transition: all 1s ease-in-out;
 }
 
 .navbar-container a {
   transition: all 1s ease-in-out;
 }
+
 .navbar-logo {
   color: rgb(var(--color-main-700));
   justify-self: start;
@@ -52,10 +54,12 @@
   width: 60vw;
   justify-content: end;
   margin-right: 2rem;
+  transition: all 1s ease-in-out;
 }
 
 .nav-item {
   height: 80px;
+  transition: all 1s ease-in-out;
 }
 
 .nav-links {
@@ -83,6 +87,9 @@
   opacity: 0;
 }
 
+.nav-links span {
+  transition: all 1s ease-in-out;
+}
 .nav-links:hover .theme--color .show-on-hover {
     display: inline;
     color: rgb(var(--color-primary));
