--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -107,6 +107,7 @@
 }
 
 .projects__item__info {
+  display: flex;
   background: rgb(var(--color-background-second), 50%);
   padding: 10px 15px 10px;
   min-height: 11rem;
@@ -133,13 +134,12 @@
   margin-bottom: 20px;
   display: flex;
   align-content: center;
-  justify-content: space-between;
-
+  justify-content: center;
+  flex-flow: wrap;
 }
 
 .projects__skills span {
-  margin-right: 3px;
-  margin-top: 5px;
+  margin: 0.4rem 0.2rem;
   padding: 5px 6px !important;
   font-size: 1rem;
   letter-spacing: 0.1rem;
