--- a/src/components/Carousel.css
+++ b/src/components/Carousel.css
@@ -4,12 +4,12 @@
 
 
 .carousel-item img {
-  border-radius: 1rem;
-  border: 1px solid black;
-  width: auto;
+  border-radius: 1.5rem;
+  width: 65%;
   margin: 0 auto;
   height: 50vh;
-  object-fit: contain;
+  object-fit: cover;
+  object-position: 50% 50%;
 }
 
 .carousel-indicators li {
