--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -54,13 +54,16 @@ body.modal-open #root{
   margin-top: 5px;
   padding-top: 10px;
 }
-
+.modal-body-info h4 {
+  font-size: 1.7rem;
+}
 .modal-body-info p {
-  padding-top: 9px;
-  margin-top: 5px;
+  margin-left: 2rem;
+  padding-top: 0.2rem;
+  margin-top: 0.2rem;
   scroll-behavior: smooth;
-  margin-block-end: 2rem;
-  margin-block-start: 1rem;
+  margin-block-end: 0.5rem;
+  margin-block-start: 0.5rem;
 }
 
 .modal-footer {
