--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -45,6 +45,7 @@
   margin: 0 1rem;
   border-radius: 10px;
   min-width: 40vw;
+  max-width: 41vw;
   margin-top: 2rem;
 }
 
@@ -90,7 +91,9 @@
   animation-name: fade-img;
   animation-duration: 2s;
 }
-
+.projects__item__pic-wrap {
+  height:  100%;
+}
 .projects__item__img {
   opacity: 0.7;
   position: absolute;
