--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -143,6 +143,7 @@ svg text {
 @media screen and (max-width: 540px) {
   .hero-content h1 {
     font-size: 2.2rem;
+    text-align: center;
   }
   .hero-content p {
     font-size: 1.3rem;
@@ -152,4 +153,9 @@ svg text {
   }
 }
 
-
+@media screen and (max-width: 250px) {
+    .theme-wrapper {
+    transform: scale(0.6);
+    left: -5vw;
+  }
+}
