--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -16,6 +16,11 @@
   color: rgb(var(--color-main-700));
 }
 
+.projects_img_offset {
+  max-width: unset !important;
+  width: auto !important;
+}
+
 .projects__container {
   border-radius: 1rem;
   display: flex;
@@ -118,7 +123,7 @@
   display: flex;
   background: rgb(var(--color-background-second), 50%);
   padding: 10px 15px 10px;
-  /*min-height: 11rem;*/
+  min-height: 12.5rem;
   flex-direction: column;
   justify-content: center;
   align-items: center;
